k8s/front-end/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: front-end
  labels:
    app: front-end
spec:
  selector:
    app: front-end
  ports:
    - port: 80
      targetPort: 8079
