k8s/front-end/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: front-end
spec:
  to:
    kind: Service
    name: front-end
  port:
    targetPort: 80
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
